ProyectoDosCompi2/src/main/antlr4/com/mycompany/yParser.java
// Generated from y.g4 by ANTLR 4.13.2
 package com.mycompany; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class yParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SECCION_ESTRUCTURAS=1, SECCION_FUNCIONES=2, ESTRUCTURA=3, DEFINIR=4, RETORNAR=5, 
		ENTERO_T=6, FLOTANTE_T=7, CADENA_T=8, CARACTER_T=9, BOOL_T=10, VERDADERO=11, 
		FALSO=12, SI=13, SINO=14, CONTRARIO=15, ENTONCES=16, ELEGIR=17, CASO=18, 
		SIEMPRE=19, PARA=20, MIENTRAS=21, HACER=22, ROMPER=23, CONTINUAR=24, IMPRIMIR=25, 
		LEER=26, FLECHA=27, IGUAL_QUE=28, DIFERENTE_DE=29, MENOR_O_IGUAL_QUE=30, 
		MAYOR_O_IGUAL_QUE=31, Y_LOGICO=32, O_LOGICO=33, INCREMENTO=34, DECREMENTO=35, 
		NO_LOGICO=36, MENOR_QUE=37, MAYOR_QUE=38, SUMA=39, RESTA=40, MULTIPLICACION=41, 
		DIVISION=42, MODULO=43, ASIGNACION=44, PARENTESIS_IZQUIERDO=45, PARENTESIS_DERECHO=46, 
		CORCHETE_IZQUIERDO=47, CORCHETE_DERECHO=48, LLAVE_IZQUIERDA=49, LLAVE_DERECHA=50, 
		DOS_PUNTOS=51, PUNTO_Y_COMA=52, COMA=53, PUNTO=54, DECIMAL=55, ENTERO=56, 
		TEXTO=57, CARACTER=58, IDENTIFICADOR=59, NEWLINE=60, COMENTARIO_DE_BLOQUE=61, 
		COMENTARIO_DE_LINEA=62, ESPACIOS=63, COMENTARIO_SIN_CERRAR=64, TEXTO_SIN_CERRAR=65, 
		CARACTER_INVALIDO=66, ERROR_LEXICO=67, INDENT=68, DEDENT=69;
	public static final int
		RULE_programa = 0, RULE_seccionEstructuras = 1, RULE_seccionFunciones = 2, 
		RULE_definicionEstructura = 3, RULE_atributoEstructura = 4, RULE_definicionFuncion = 5, 
		RULE_tipoRetorno = 6, RULE_parametros = 7, RULE_parametro = 8, RULE_tipo = 9, 
		RULE_bloque = 10, RULE_instruccion = 11, RULE_instruccionSimple = 12, 
		RULE_instruccionCompuesta = 13, RULE_declaracion = 14, RULE_dimension = 15, 
		RULE_inicializador = 16, RULE_listaInicializacion = 17, RULE_asignacion = 18, 
		RULE_incremento = 19, RULE_retornar = 20, RULE_imprimir = 21, RULE_leer = 22, 
		RULE_llamadaFuncion = 23, RULE_argumentos = 24, RULE_condicional = 25, 
		RULE_sinoSi = 26, RULE_contrario = 27, RULE_elegir = 28, RULE_caso = 29, 
		RULE_casoSiempre = 30, RULE_cicloPara = 31, RULE_inicioPara = 32, RULE_actualizacionPara = 33, 
		RULE_cicloMientras = 34, RULE_cicloHacer = 35, RULE_acceso = 36, RULE_sufijoAcceso = 37, 
		RULE_expresion = 38, RULE_literal = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "seccionEstructuras", "seccionFunciones", "definicionEstructura", 
			"atributoEstructura", "definicionFuncion", "tipoRetorno", "parametros", 
			"parametro", "tipo", "bloque", "instruccion", "instruccionSimple", "instruccionCompuesta", 
			"declaracion", "dimension", "inicializador", "listaInicializacion", "asignacion", 
			"incremento", "retornar", "imprimir", "leer", "llamadaFuncion", "argumentos", 
			"condicional", "sinoSi", "contrario", "elegir", "caso", "casoSiempre", 
			"cicloPara", "inicioPara", "actualizacionPara", "cicloMientras", "cicloHacer", 
			"acceso", "sufijoAcceso", "expresion", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'%estructuras'", "'%funciones'", "'estructura'", "'definir'", 
			"'retornar'", "'entero'", "'flotante'", "'cadena'", "'caracter'", "'bool'", 
			"'verdadero'", "'falso'", "'si'", "'sino'", "'contrario'", "'entonces'", 
			"'elegir'", "'caso'", "'siempre'", "'para'", "'mientras'", "'hacer'", 
			"'romper'", "'continuar'", "'imprimir'", "'leer'", "'->'", "'=='", "'!='", 
			"'<='", "'>='", "'&&'", "'||'", "'++'", "'--'", "'!'", "'<'", "'>'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'('", "')'", "'['", "']'", 
			"'{'", "'}'", "':'", "';'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SECCION_ESTRUCTURAS", "SECCION_FUNCIONES", "ESTRUCTURA", "DEFINIR", 
			"RETORNAR", "ENTERO_T", "FLOTANTE_T", "CADENA_T", "CARACTER_T", "BOOL_T", 
			"VERDADERO", "FALSO", "SI", "SINO", "CONTRARIO", "ENTONCES", "ELEGIR", 
			"CASO", "SIEMPRE", "PARA", "MIENTRAS", "HACER", "ROMPER", "CONTINUAR", 
			"IMPRIMIR", "LEER", "FLECHA", "IGUAL_QUE", "DIFERENTE_DE", "MENOR_O_IGUAL_QUE", 
			"MAYOR_O_IGUAL_QUE", "Y_LOGICO", "O_LOGICO", "INCREMENTO", "DECREMENTO", 
			"NO_LOGICO", "MENOR_QUE", "MAYOR_QUE", "SUMA", "RESTA", "MULTIPLICACION", 
			"DIVISION", "MODULO", "ASIGNACION", "PARENTESIS_IZQUIERDO", "PARENTESIS_DERECHO", 
			"CORCHETE_IZQUIERDO", "CORCHETE_DERECHO", "LLAVE_IZQUIERDA", "LLAVE_DERECHA", 
			"DOS_PUNTOS", "PUNTO_Y_COMA", "COMA", "PUNTO", "DECIMAL", "ENTERO", "TEXTO", 
			"CARACTER", "IDENTIFICADOR", "NEWLINE", "COMENTARIO_DE_BLOQUE", "COMENTARIO_DE_LINEA", 
			"ESPACIOS", "COMENTARIO_SIN_CERRAR", "TEXTO_SIN_CERRAR", "CARACTER_INVALIDO", 
			"ERROR_LEXICO", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "y.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public yParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public SeccionFuncionesContext seccionFunciones() {
			return getRuleContext(SeccionFuncionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(yParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(yParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(yParser.NEWLINE, i);
		}
		public SeccionEstructurasContext seccionEstructuras() {
			return getRuleContext(SeccionEstructurasContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yListener ) ((yListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yListener ) ((yListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yVisitor ) return ((yVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(80);
				match(NEWLINE);
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SECCION_ESTRUCTURAS) {
				{
				setState(86);
				seccionEstructuras();
				}
			}

			setState(89);
			seccionFunciones();
			setState(90);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionEstructurasContext extends ParserRuleContext {
		public TerminalNode SECCION_ESTRUCTURAS() { return getToken(yParser.SECCION_ESTRUCTURAS, 0); }
		public TerminalNode NEWLINE() { return getToken(yParser.NEWLINE, 0); }
		public List<DefinicionEstructuraContext> definicionEstructura() {
			return getRuleContexts(DefinicionEstructuraContext.class);
		}
		public DefinicionEstructuraContext definicionEstructura(int i) {
			return getRuleContext(DefinicionEstructuraContext.class,i);
		}
		public SeccionEstructurasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionEstructuras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yListener ) ((yListener)listener).enterSeccionEstructuras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yListener ) ((yListener)listener).exitSeccionEstructuras(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yVisitor ) return ((yVisitor<? extends T>)visitor).visitSeccionEstructuras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionEstructurasContext seccionEstructuras() throws RecognitionException {
		SeccionEstructurasContext _localctx = new SeccionEstructurasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_seccionEstructuras);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(SECCION_ESTRUCTURAS);
			setState(93);
			match(NEWLINE);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ESTRUCTURA) {
				{
				{
				setState(94);
				definicionEstructura();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionFuncionesContext extends ParserRuleContext {
		public TerminalNode SECCION_FUNCIONES() { return getToken(yParser.SECCION_FUNCIONES, 0); }
		public TerminalNode NEWLINE() { return getToken(yParser.NEWLINE, 0); }
		public List<DefinicionFuncionContext> definicionFuncion() {
			return getRuleContexts(DefinicionFuncionContext.class);
		}
		public DefinicionFuncionContext definicionFuncion(int i) {
			return getRuleContext(DefinicionFuncionContext.class,i);
		}
		public SeccionFuncionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionFunciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yListener ) ((yListener)listener).enterSeccionFunciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yListener ) ((yListener)listener).exitSeccionFunciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yVisitor ) return ((yVisitor<? extends T>)visitor).visitSeccionFunciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionFuncionesContext seccionFunciones() throws RecognitionException {
		SeccionFuncionesContext _localctx = new SeccionFuncionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_seccionFunciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(SECCION_FUNCIONES);
			setState(101);
			match(NEWLINE);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEFINIR) {
				{
				{
				setState(102);
				definicionFuncion();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionEstructuraContext extends ParserRuleContext {
		public TerminalNode ESTRUCTURA() { return getToken(yParser.ESTRUCTURA, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(yParser.IDENTIFICADOR, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(yParser.DOS_PUNTOS, 0); }
		public TerminalNode NEWLINE() { return getToken(yParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(yParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(yParser.DEDENT, 0); }
		public List<AtributoEstructuraContext> atributoEstructura() {
			return getRuleContexts(AtributoEstructuraContext.class);
		}
		public AtributoEstructuraContext atributoEstructura(int i) {
			return getRuleContext(AtributoEstructuraContext.class,i);
		}
		public DefinicionEstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionEstructura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yListener ) ((yListener)listener).enterDefinicionEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yListener ) ((yListener)listener).exitDefinicionEstructura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yVisitor ) return ((yVisitor<? extends T>)visitor).visitDefinicionEstructura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicionEstructuraContext definicionEstructura() throws RecognitionException {
		DefinicionEstructuraContext _localctx = new DefinicionEstructuraContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definicionEstructura);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(ESTRUCTURA);
			setState(109);
			match(IDENTIFICADOR);
			setState(110);
			match(DOS_PUNTOS);
			setState(111);
			match(NEWLINE);
			setState(112);
			match(INDENT);
			setState(114); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(113);
				atributoEstructura();
				}
				}
				setState(116); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 576460752303425472L) != 0) );
			setState(118);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtributoEstructuraContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(yParser.IDENTIFICADOR, 0); }
		public TerminalNode NEWLINE() { return getToken(yParser.NEWLINE, 0); }
		public List<DimensionContext> dimension() {
			return getRuleContexts(DimensionContext.class);
		}
		public DimensionContext dimension(int i) {
			return getRuleContext(DimensionContext.class,i);
		}
		public AtributoEstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributoEstructura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof yListener ) ((yListener)listener).enterAtributoEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof yListener ) ((yListener)listener).exitAtributoEstructura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof yVisitor ) return ((yVisitor<? extends T>)visitor).visitAtributoEstructura(this);
			else return visitor.visitChildren(this);
		}
	}
